--- a/src/PrestaShopBundle/Resources/config/services/adapter/tax_rules_group.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/tax_rules_group.yml
@@ -32,8 +32,11 @@ services:
       - name: 'tactician.handler'
         command: 'PrestaShop\PrestaShop\Core\Domain\TaxRulesGroup\Command\SetTaxRulesGroupStatusCommand'
 
-  prestashop.adapter.tax_rules_group.repository.tax_rules_group_repository:
-    class: 'PrestaShop\PrestaShop\Adapter\TaxRulesGroup\Repository\TaxRulesGroupRepository'
+  PrestaShop\PrestaShop\Adapter\TaxRulesGroup\Repository\TaxRulesGroupRepository:
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
+
+  prestashop.adapter.tax_rules_group.repository.tax_rules_group_repository:
+    alias: PrestaShop\PrestaShop\Adapter\TaxRulesGroup\Repository\TaxRulesGroupRepository
+    deprecated: ~
