--- a/src/PrestaShopBundle/Resources/config/services/adapter/cart.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/cart.yml
@@ -90,7 +90,7 @@ services:
   prestashop.adapter.query_handler.get_cart_for_viewing_handler:
     class: 'PrestaShop\PrestaShop\Adapter\Cart\QueryHandler\GetCartForViewingHandler'
     arguments:
-      - '@prestashop.adapter.image_manager'
+      - '@PrestaShop\PrestaShop\Adapter\ImageManager'
       - "@prestashop.core.localization.locale.context_locale"
     tags:
       - name: tactician.handler
