--- a/src/PrestaShopBundle/Resources/config/services/adapter/common.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/common.yml
@@ -6,15 +6,17 @@ services:
 
   prestashop.adapter.legacy.configuration:
     alias: PrestaShop\PrestaShop\Adapter\Configuration
-    deprecated: ~
+
+  PrestaShop\PrestaShop\Adapter\Tools: ~
 
   prestashop.adapter.tools:
-    class: PrestaShop\PrestaShop\Adapter\Tools
+    alias: PrestaShop\PrestaShop\Adapter\Tools
+    deprecated: ~
 
   PrestaShop\PrestaShop\Adapter\LegacyContext:
     arguments:
       - "%mail_themes_uri%"
-      - '@prestashop.adapter.tools'
+      - '@PrestaShop\PrestaShop\Adapter\Tools'
 
   prestashop.adapter.legacy.context:
     alias: PrestaShop\PrestaShop\Adapter\LegacyContext
@@ -27,7 +29,9 @@ services:
   prestashop.adapter.validate:
     class: PrestaShop\PrestaShop\Adapter\Validate
 
-  prestashop.adapter.context_state_manager:
-    class: PrestaShop\PrestaShop\Adapter\ContextStateManager
+  PrestaShop\PrestaShop\Adapter\ContextStateManager:
     arguments:
-      - '@prestashop.adapter.legacy.context'
+      - '@PrestaShop\PrestaShop\Adapter\LegacyContext'
+
+  prestashop.adapter.context_state_manager:
+    alias: PrestaShop\PrestaShop\Adapter\ContextStateManager
