--- a/src/PrestaShopBundle/Resources/config/services/adapter/form.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/form.yml
@@ -89,8 +89,8 @@ services:
     class: 'PrestaShop\PrestaShop\Adapter\Form\ChoiceProvider\ProductDefaultCategoryChoiceProvider'
     arguments:
       - "@=service('prestashop.adapter.legacy.configuration').getInt('PS_HOME_CATEGORY')"
-      - '@prestashop.adapter.category.repository.category_repository'
-      - '@prestashop.core.category.name_builder.category_display_name_builder'
+      - '@PrestaShop\PrestaShop\Adapter\Category\Repository\CategoryRepository'
+      - '@PrestaShop\PrestaShop\Core\Category\NameBuilder\CategoryDisplayNameBuilder'
       - "@=service('prestashop.adapter.legacy.context').getContext().shop.id"
       - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
 
