--- a/src/PrestaShopBundle/Resources/config/services/adapter/manufacturer.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/manufacturer.yml
@@ -64,5 +64,4 @@ services:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Manufacturer\Query\GetManufacturerForViewing
 
-  prestashop.adapter.manufacturer.repository.manufacturer_repository:
-    class: 'PrestaShop\PrestaShop\Adapter\Manufacturer\Repository\ManufacturerRepository'
+  PrestaShop\PrestaShop\Adapter\Manufacturer\Repository\ManufacturerRepository: ~
