--- a/src/PrestaShopBundle/Resources/config/services/adapter/services.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/services.yml
@@ -84,9 +84,12 @@ services:
   prestashop.adapter.shop.context:
     class: PrestaShop\PrestaShop\Adapter\Shop\Context
 
+  PrestaShop\PrestaShop\Adapter\ImageManager:
+    arguments: [ '@PrestaShop\PrestaShop\Adapter\LegacyContext' ]
+
   prestashop.adapter.image_manager:
-    class: PrestaShop\PrestaShop\Adapter\ImageManager
-    arguments: [ "@prestashop.adapter.legacy.context" ]
+    alias: PrestaShop\PrestaShop\Adapter\ImageManager
+    deprecated: ~
 
   prestashop.core.module.updater:
     class: PrestaShop\PrestaShop\Adapter\Module\ModuleDataUpdater
@@ -94,9 +97,9 @@ services:
   prestashop.adapter.admin.model.product:
     class: PrestaShopBundle\Model\Product\AdminModelAdapter
     arguments:
-      - "@prestashop.adapter.legacy.context"
+      - '@PrestaShop\PrestaShop\Adapter\LegacyContext'
       - '@PrestaShop\PrestaShop\Adapter\Product\AdminProductWrapper'
-      - "@prestashop.adapter.tools"
+      - '@PrestaShop\PrestaShop\Adapter\Tools'
       - "@prestashop.adapter.data_provider.product"
       - "@prestashop.adapter.data_provider.supplier"
       - "@prestashop.adapter.data_provider.warehouse"
@@ -105,25 +108,25 @@ services:
       - "@prestashop.adapter.shop.context"
       - "@prestashop.adapter.data_provider.tax"
       - "@router"
-      - "@prestashop.utils.float_parser"
+      - '@PrestaShopBundle\Utils\FloatParser'
 
   prestashop.adapter.translation_route_finder:
     class: PrestaShop\PrestaShop\Adapter\Translations\TranslationRouteFinder
     arguments:
       - '@prestashop.service.translation'
-      - '@=service("prestashop.adapter.legacy.context").getContext().link'
+      - '@=service("PrestaShop\\PrestaShop\\Adapter\\LegacyContext").getContext().link'
       - '@prestashop.core.admin.module.repository'
 
   prestashop.adapter.shop.shop_url:
     class: 'PrestaShop\PrestaShop\Adapter\Shop\ShopUrlDataProvider'
     arguments:
-      - '@=service("prestashop.adapter.legacy.context").getContext().shop.id'
+      - '@=service("PrestaShop\\PrestaShop\\Adapter\\LegacyContext").getContext().shop.id'
 
   prestashop.adapter.file.htaccess_file_generator:
     class: 'PrestaShop\PrestaShop\Adapter\File\HtaccessFileGenerator'
     arguments:
       - '@prestashop.core.cache.clearer.cache_clearer_chain'
-      - '@prestashop.adapter.tools'
+      - '@PrestaShop\PrestaShop\Adapter\Tools'
       - "@=service('prestashop.adapter.legacy.configuration').getBoolean('PS_HTACCESS_DISABLE_MULTIVIEWS')"
 
   prestashop.adapter.file.robots_text_file_generator:
