--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -662,7 +662,7 @@ services:
     arguments:
       - '@=service("prestashop.core.form.choice_provider.canonical_redirect_type").getChoices()'
       - '@=service("prestashop.core.util.url.url_file_checker").isHtaccessFileWritable()'
-      - '@=service("prestashop.adapter.tools").isModRewriteActive()'
+      - '@=service("PrestaShop\\PrestaShop\\Adapter\\Tools").isModRewriteActive()'
       - '@=service("prestashop.adapter.shop.shop_url").doesMainShopUrlExist()'
     tags:
       - { name: form.type }
@@ -1619,7 +1619,7 @@ services:
       - "@=service('prestashop.adapter.legacy.configuration').getBoolean('PS_TAX')"
       - "@=service('prestashop.adapter.legacy.configuration').getBoolean('PS_USE_ECOTAX')"
       - "@=service('prestashop.adapter.legacy.configuration').getInt('PS_ECOTAX_TAX_RULES_GROUP_ID')"
-      - '@prestashop.adapter.tax.tax_computer'
+      - '@PrestaShop\PrestaShop\Adapter\Tax\TaxComputer'
       - '@=service("prestashop.adapter.legacy.context").getContext().country.id'
     tags:
       - { name: form.type }
@@ -1932,7 +1932,7 @@ services:
       - "@=service('prestashop.adapter.legacy.configuration').getBoolean('PS_TAX')"
       - "@=service('prestashop.adapter.legacy.configuration').getBoolean('PS_USE_ECOTAX')"
       - "@=service('prestashop.adapter.legacy.configuration').getInt('PS_ECOTAX_TAX_RULES_GROUP_ID')"
-      - '@prestashop.adapter.tax.tax_computer'
+      - '@PrestaShop\PrestaShop\Adapter\Tax\TaxComputer'
       - '@=service("prestashop.adapter.legacy.context").getContext().country.id'
       - '@prestashop.core.localization.locale.context_locale'
     tags:
@@ -1972,7 +1972,7 @@ services:
       - '@=service("prestashop.adapter.data_provider.currency").getDefaultCurrencyIsoCode()'
       - "@=service('prestashop.adapter.legacy.configuration').get('PS_WEIGHT_UNIT')"
       - '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductRepository'
-      - '@prestashop.adapter.tax.tax_computer'
+      - '@PrestaShop\PrestaShop\Adapter\Tax\TaxComputer'
     tags:
       - { name: form.type }
 
