--- a/src/PrestaShopBundle/Resources/config/services/bundle/repository.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/repository.yml
@@ -50,7 +50,7 @@ services:
       - "@doctrine.dbal.default_connection"
       - "@doctrine.orm.default_entity_manager"
       - "@prestashop.adapter.legacy.context"
-      - "@prestashop.adapter.image_manager"
+      - '@PrestaShop\PrestaShop\Adapter\ImageManager'
       - "@prestashop.adapter.stock_manager"
       - "%database_prefix%"
 
@@ -61,7 +61,7 @@ services:
       - "@doctrine.dbal.default_connection"
       - "@doctrine.orm.default_entity_manager"
       - "@prestashop.adapter.legacy.context"
-      - "@prestashop.adapter.image_manager"
+      - '@PrestaShop\PrestaShop\Adapter\ImageManager'
       - "%database_prefix%"
       - '@=service("prestashop.adapter.legacy.context").getLanguage().date_format_full'
 
