--- a/src/PrestaShopBundle/Resources/config/services/bundle/utils.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/utils.yml
@@ -5,7 +5,10 @@ services:
   prestashop.utils.zip_manager:
     class: PrestaShopBundle\Utils\ZipManager
 
-  prestashop.utils.float_parser:
-    class: PrestaShopBundle\Utils\FloatParser
+  PrestaShopBundle\Utils\FloatParser:
     arguments:
       - '@prestashop.core.util.arabic_to_latin_digit_converter'
+
+  prestashop.utils.float_parser:
+    alias: PrestaShopBundle\Utils\FloatParser
+    deprecated: ~
