--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -1658,10 +1658,12 @@ services:
   PrestaShopBundle\Form\Admin\Sell\Product\Pricing\SpecificPriceType:
     parent: 'form.type.translatable.aware'
     arguments:
-      - '@prestashop.adapter.form.choice_provider.combination_id_choice_provider'
       - '@prestashop.core.admin.url_generator'
       - '@PrestaShop\PrestaShop\Adapter\Product\Repository\ProductRepository'
+      - '@prestashop.adapter.attribute.repository.attribute_repository'
       - '@PrestaShopBundle\Form\Admin\Sell\Product\EventListener\SpecificPriceCombinationListener'
+      - '@PrestaShop\PrestaShop\Core\Product\Combination\NameBuilder\CombinationNameBuilder'
+      - '@=service("prestashop.adapter.legacy.context").getContext().language.id'
     public: false
     tags:
       - { name: form.type }
