Adding attribute as part of attribute group feature flag

--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/attribute.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/attribute.yml
@@ -1,4 +1,3 @@
-# @todo: add legacy links after page is fully migrated
 admin_attributes_index:
   path: /
   methods: GET
@@ -7,7 +6,8 @@ admin_attributes_index:
     _legacy_controller: AdminAttributesGroups
     redirectQueryParamsToKeep:
       - 'attributeGroupId'
-    #  _legacy_link: AdminAttributesGroups:viewattribute_group
+    _legacy_link: AdminAttributesGroups:viewattribute_group
+    _legacy_feature_flag: attribute_group
     _legacy_parameters:
       id_attribute_group: attributeGroupId
     requirements:
@@ -21,7 +21,8 @@ admin_attributes_search:
     _legacy_controller: AdminAttributesGroups
     gridDefinitionFactoryServiceId: prestashop.core.grid.definition.factory.attribute
     redirectRoute: admin_attributes_index
-    #  _legacy_link: AdminAttributesGroups:submitFilterattribute_values
+    _legacy_link: AdminAttributesGroups:submitFilterattribute_values
+    _legacy_feature_flag: attribute_group
     redirectQueryParamsToKeep:
       - 'attributeGroupId'
 
@@ -33,7 +34,8 @@ admin_attributes_create:
     _legacy_controller: AdminAttributesGroups
     redirectQueryParamsToKeep:
       - 'attributeGroupId'
-#  _legacy_link: AdminAttributesGroups:addattribute_group
+    _legacy_link: AdminAttributesGroups:addattribute_group
+    _legacy_feature_flag: attribute_group
 
 admin_attributes_edit:
   path: /{attributeId}/edit
@@ -43,7 +45,8 @@ admin_attributes_edit:
     _legacy_controller: AdminAttributesGroups
     redirectQueryParamsToKeep:
       - 'attributeGroupId'
-    #  _legacy_link: AdminAttributesGroups:updateattribute
+    _legacy_link: AdminAttributesGroups:updateattribute
+    _legacy_feature_flag: attribute_group
     _legacy_parameters:
       id_attribute_group: attributeGroupId
       id_attribute: attributeId
@@ -58,7 +61,8 @@ admin_attributes_delete:
     _legacy_controller: AdminAttributesGroups
     redirectQueryParamsToKeep:
       - 'attributeGroupId'
-    #  _legacy_link: AdminAttributesGroups:deleteattribute
+    _legacy_link: AdminAttributesGroups:deleteattribute
+    _legacy_feature_flag: attribute_group
     _legacy_parameters:
       id_attribute_group: attributeGroupId
       id_attribute: attributeId
@@ -71,7 +75,8 @@ admin_attributes_bulk_delete:
     _legacy_controller: AdminAttributesGroups
     redirectQueryParamsToKeep:
       - 'attributeGroupId'
-    #  _legacy_link: AdminAttributesGroups:bulkdeleteattribute
+    _legacy_link: AdminAttributesGroups:bulkdeleteattribute
+    _legacy_feature_flag: attribute_group
     _legacy_parameters:
       id_attribute_group: attributeGroupId
       id_attribute: attributeId
@@ -82,4 +87,5 @@ admin_attributes_update_position:
   defaults:
     _controller: 'PrestaShopBundle\Controller\Admin\Sell\Catalog\AttributeController::updatePositionAction'
     _legacy_controller: AdminAttributesGroups
-#  _legacy_link: AdminAttributesGroups:updateAttributesPositions
+    _legacy_link: AdminAttributesGroups:updateAttributesPositions
+    _legacy_feature_flag: attribute_group
