--- a/src/PrestaShopBundle/Resources/config/services/bundle/routing.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/routing.yml
@@ -3,6 +3,7 @@ services:
     class: 'PrestaShopBundle\Routing\YamlModuleLoader'
     arguments:
       - '@=service("prestashop.adapter.module.repository.module_repository").getActiveModulesPaths()'
+      - '@prestashop.adapter.module.repository.module_repository'
     tags: [ routing.loader ]
 
   prestashop.bundle.routing.converter.legacy_url_converter:
