--- a/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/form/form_data_provider.yml
@@ -221,6 +221,10 @@ services:
       - '@prestashop.core.query_bus'
       - '@=service("prestashop.adapter.legacy.context").getContext().country.id'
 
+  PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\ApplicationFormDataProvider:
+    arguments:
+      - '@prestashop.core.command_bus'
+
   PrestaShop\PrestaShop\Core\Form\IdentifiableObject\DataProvider\TaxRulesGroupFormDataProvider:
     arguments:
       - '@prestashop.core.query_bus'
