--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -2185,6 +2185,12 @@ services:
     tags:
       - { name: form.type }
 
+  PrestaShopBundle\Form\Admin\AdvancedParameters\AuthorizationServer\ApplicationType:
+    parent: 'form.type.translatable.aware'
+    public: true
+    tags:
+      - { name: form.type }
+
   PrestaShopBundle\Form\Admin\Improve\International\Tax\TaxRulesGroupType:
     parent: 'form.type.translatable.aware'
     public: true
