--- a/src/PrestaShopBundle/Resources/config/services/adapter/cache.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/cache.yml
@@ -13,6 +13,8 @@ services:
 
   prestashop.adapter.cache.clearer.symfony_cache_clearer:
     class: 'PrestaShop\PrestaShop\Adapter\Cache\Clearer\SymfonyCacheClearer'
+    arguments:
+      - '@prestashop.router'
 
   prestashop.adapter.cache.clearer.xml_cache_clearer:
     class: 'PrestaShop\PrestaShop\Adapter\Cache\Clearer\XmlCacheClearer'
